comment out incorrect duplicate line 216

--- a/extras/latex/lstlean.tex
+++ b/extras/latex/lstlean.tex
@@ -213,7 +213,7 @@ literate=
 
 {...}{{\ensuremath{\ldots}}}1
 
-{▸}{{\ensuremath{\triangleright}}}1
+%{▸}{{\ensuremath{\triangleright}}}1
 
 {𝒳}{{\ensuremath{\mathcal{X}}}}1
 
